feat: update contents

--- a/src/pages/registrow.astro
+++ b/src/pages/registrow.astro
@@ -13,10 +13,10 @@ import BereniceMobileVerde from '../assets/foto_verde_berenice_mobile.png'
 import MariposaClase1Mobile from '../assets/mariposa_clase_1_mobile.png'
 import BereniceDesktop from '../assets/berenice_desktop.png'
 import LayoutCurso from '../layouts/LayoutCurso.astro'
-import Clase1Desktop from '../assets/clase_1_desktop.webp'
-import Clase2Desktop from '../assets/Clase_2_desktop.webp'
-import Clase3Desktop from '../assets/Clase_3_desktop.webp'
-import Clase4Desktop from '../assets/Clase_4_desktop.webp'
+import Clase1Desktop from '../assets/clase_1_desktop.png'
+import Clase2Desktop from '../assets/clase_2_desktop.png'
+import Clase3Desktop from '../assets/clase_3_desktop.png'
+import Clase4Desktop from '../assets/clase_4_desktop.png'
 import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 ---
 
@@ -29,16 +29,11 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 			<div class="px-6">
 				<div class="mt-6 text-center text-[#3D3553]">
 					<h1 class="text- text-3xl md:text-6xl">Liberate de la <br /> infidelidad y su dolor</h1>
-					<p class="text-sm text-[#70648F] md:pb-8 md:text-2xl">
-						Taller Online - del 28 al 31 de Octubre
-					</p>
+					<p class="text-sm text-[#70648F] md:pb-8 md:text-2xl">Taller Online 100% gratuito</p>
 					<div class="my-3 h-0.5 w-full bg-[#70648F]/70 md:hidden"></div>
 
 					<p class="text-xs md:py-8 md:text-2xl lg:px-24">
-						Descubre el <strong>método exacto</strong> para <strong
-							>dejar de sufrir por su traición</strong
-						>, aumentando el autoestima y creando <span class="underline">el amor que mereces</span>
-						 (con o sin él).
+						En vivo del 17 al 22 de Diciembre Hora Ciudad de México
 					</p>
 				</div>
 
@@ -49,7 +44,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					<div class="flex items-center justify-center gap-2 space-x-3 py-4">
 						<ChevronDown />
 						<p class="text-center text-sm uppercase text-white md:text-xl">
-							Entra al <strong>grupo de Whatsapp</strong> del TALLER y reserva tu lugar!
+							Entra al <strong>grupo de Whatsapp</strong> del TALLER y reserva tu lugar
 						</p>
 						<ChevronDown />
 					</div>
@@ -67,8 +62,8 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					</form> -->
 					<form id="registro-form" class="space-y-2 md:space-y-6">
 						<button
-							class="h-10 w-full cursor-pointer rounded-lg bg-white font-bold uppercase text-[#3D3553] md:h-14 md:text-xl"
-							type="submit">Entrar al grupo de Whatssapp</button
+							class="h-10 w-full cursor-pointer rounded-lg bg-white font-bold uppercase text-[#3D3553] shadow-xl md:h-14 md:text-xl"
+							type="submit">¡Quiero Registratme Ahora!</button
 						>
 					</form>
 					<Image src={MariposaL} alt="Mariposa Top" class="absolute -bottom-8 -left-8" />
@@ -304,10 +299,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					</a>
 				</button>
 				<div class="relative pb-6">
-					<p class="mx-auto w-[70%] pt-4 text-center text-xs text-white lg:text-xl">
-						Asegura tu lugar y recibirás en tu correo tu ticket de entrada al evento digital
-					</p>
-					<Image src={MariposaAbajo} alt="Mariposa Top" class="absolute -bottom-4" />
+					<!-- <Image src={MariposaAbajo} alt="Mariposa Top" class="absolute -bottom-4" /> -->
 				</div>
 			</div>
 		</div>
@@ -317,9 +309,9 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 		<h2
 			class="mx-auto w-[80%] text-center text-xl font-bold uppercase text-[#554871] lg:pt-8 lg:text-3xl"
 		>
-			esto es lo que vas a aprender en las 4 clases del taller online
+			esto es lo que vas a aprender en el taller online
 		</h2>
-		<p class="py-2 text-center lg:text-2xl">(del 23 al 31 de Octubre)</p>
+
 		<div class="grid items-center gap-8 lg:grid-cols-2 lg:pt-8">
 			<div class="relative">
 				<Image
@@ -331,11 +323,6 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					sizes="(max-width: 768px) 321px, 593px"
 				/>
 
-				<h2
-					class="mx-auto w-[80%] text-center text-xl font-bold uppercase text-[#554871] lg:mt-4 lg:text-2xl"
-				>
-					CLASE #1 (Octubre 28)
-				</h2>
 				<p class="mx-auto px-4 text-center text-lg text-[#554871] lg:w-[50%] lg:pt-4 lg:text-2xl">
 					Arranca de Raíz el dolor de su traición sin morir en el intento
 				</p>
@@ -355,11 +342,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					class="mx-auto h-[188px] w-[321px] rounded-3xl object-cover md:h-[348px] md:w-[593px]"
 					sizes="(max-width: 768px) 321px, 593px"
 				/>
-				<h2
-					class="mx-auto w-[80%] text-center text-xl font-bold uppercase text-[#554871] lg:mt-4 lg:text-2xl"
-				>
-					CLASE #2 (Octubre 29)
-				</h2>
+
 				<p
 					class="px-4 text-center text-lg text-[#554871] lg:mx-auto lg:w-[50%] lg:pt-4 lg:text-2xl"
 				>
@@ -377,11 +360,6 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					sizes="(max-width: 768px) 321px, 593px"
 				/>
 				<div class="relative">
-					<h2
-						class="mx-auto w-[80%] text-center text-xl font-bold uppercase text-[#554871] lg:mt-4 lg:text-2xl"
-					>
-						CLASE #3 (Octubre 30)
-					</h2>
 					<p class="mx-auto w-[50%] px-4 text-center text-lg text-[#554871] lg:pt-4 lg:text-2xl">
 						Cómo pasar de la Herida a la libertad emocional
 					</p>
@@ -401,11 +379,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					class="mx-auto h-[188px] w-[321px] rounded-3xl object-cover md:h-[348px] md:w-[593px]"
 					sizes="(max-width: 768px) 321px, 593px"
 				/>
-				<h2
-					class="mx-auto w-[80%] text-center text-xl font-bold uppercase text-[#554871] lg:mt-4 lg:text-2xl"
-				>
-					CLASE #4 (Octubre 31)
-				</h2>
+
 				<p
 					class="px-4 text-center text-lg text-[#554871] lg:mx-auto lg:w-[50%] lg:pt-4 lg:text-2xl"
 				>
@@ -415,13 +389,13 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 			</div>
 		</div>
 		<div class="px-8 py-6 text-sm">
-			<p class="lg:w-[8 0%] mx-auto text-center text-[#554871] lg:text-3xl">
+			<!-- <p class="lg:w-[8 0%] mx-auto text-center text-[#554871] lg:text-3xl">
 				Prepárate para vivir un recorrido transformador donde <strong>sanarás tus heridas</strong>
 				 descubrirás tu verdadera fueraza interior y aprenderás <strong
 					>herramientas prácticas</strong
 				> para <span class="underline">liberarte</span> del dolor y construir la vida emocional que
 				mereces.
-			</p>
+			</p> -->
 		</div>
 	</section>
 	<section class="bg-[#70648F] py-6 lg:py-12">
